--- a/ARMdps/wwwroot/css/site.css
+++ b/ARMdps/wwwroot/css/site.css
@@ -181,13 +181,13 @@ button:active {
 /**/
 
 table .editform_table {
-    font-family: 'Roboto';
-    font-style: normal;
-    font-weight: 500;
-    font-size: 15px;
-    line-height: 17px;
-    color: #044C6A;
-    width: 100%;
+    font-family: 'Roboto' !important;
+    font-style: normal !important;
+    font-weight: 500 !important;
+    font-size: 15px !important;
+    line-height: 17px !important;
+    color: #044C6A !important;
+    width: 100% !important;
 }
 
 /*    table .region_table td, th {
@@ -258,11 +258,11 @@ table.dataTable tbody td .region_td_in {
 
 .save_button_click {
     background-color: #2A9964;
-    border: none;
+    border: none!important;
 }
 
 .reset_button_click {
-    border: none;
+    border: none!important;
 }
 /**/
 
@@ -352,6 +352,18 @@ table .dataTable {
     color: #044C6A !important;
 }
 
+table.dataTable {
+    color: #044C6A !important;
+    font-family: 'Roboto' !important;
+    font-style: normal !important;
+    font-weight: 400 !important;
+    font-size: 14px !important;
+    line-height: 16px !important;
+    width: 100% !important;
+    padding: 5px;
+    border-bottom:none;
+}
+
 table.dataTable.display {
     color: #044C6A !important;
     font-family: 'Roboto' !important;
@@ -359,6 +371,7 @@ table.dataTable.display {
     font-weight: 400 !important;
     font-size: 14px !important;
     line-height: 16px !important;
+    width: 100% !important;
 }
 
 table .dataTables_filter {
@@ -369,18 +382,10 @@ table .dataTables_filter {
     line-height: 16px !important;    
 }
 
-.bi-trash::before {
-    content: "\f5de";
-    justify-content: center;
-    text-align: center;
-    font-size: 20px;
-    color: #FF3E3E;
+table.dataTable.no-footer{
+    border-bottom:none;
 }
 
-bi-search:before {
-    color: #044C6A !important;
-   
-}
 i .table_search {
     color: #044C6A !important;
     margin-right: -25px !important;
@@ -455,4 +460,40 @@ table.dataTable tr.selected td.select-checkbox::after {
 }
 .hide_table{
     display:none;
+}
+
+/*Переопределение хедера таблиц Datatables*/
+
+.dataTables_scrollHeadInner {
+    width: 100% !important;
+}
+
+.sorting sorting_asc,
+.sorting sorting_desc {
+    text-align: left !important;
+}
+
+.close_button {
+    color: #E5E5E5 !important;
+    justify-content:end !important;
+
+}
+
+/*Иконки*/
+
+.bi-trash::before {
+    content: "\f5de";
+    justify-content: center;
+    text-align: center;
+    font-size: 20px;
+    color: #FF3E3E;
+}
+
+bi-search:before {
+    color: #044C6A !important;
+}
+
+bi-x-square::before {
+    justify-content: center !important;
+    background-color: #044C6A !important;
 }
